--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -3,21 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zoning Done Example</title>
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <title>My Web Page</title>
     <link rel="stylesheet" href="styles/3-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="icon" href="images/icon.png" type="image/png">
 </head>
 <body>
-
     <header>
         <div class="logo"></div>
     </header>
-
     <footer>
-        Holberton School
+        <p>Holberton School</p>
     </footer>
-
 </body>
 </html>
+
